src/main/java/halo/dal/analysis/antlr/zxl/AntlrV3SQLParser.java
package halo.dal.analysis.antlr.zxl;// $ANTLR 3.4 AntlrV3SQL.g 2015-10-22 18:48:42

import java.util.List;
import java.util.ArrayList;


import halo.dal.analysis.antlr.AntlrParserDelegate;
import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class AntlrV3SQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "AS", "ASC", "B", "BASIC_NAME", "BETWEEN", "BY", "C", "CROSS", "D", "DELETE", "DESC", "E", "EXISTS", "F", "FROM", "FULL", "G", "GROUP", "H", "HAVING", "I", "IN", "INNER", "INSERT", "INTO", "J", "JOIN", "K", "L", "LEFT", "M", "N", "O", "ON", "OR", "ORDER", "OVER", "P", "PRE_SET", "Q", "R", "RIGHT", "ROWNUMBER", "S", "SELECT", "SET", "T", "TEXT_STRING", "U", "UPDATE", "V", "VALUES", "W", "WHERE", "WS", "X", "Y", "Z", "'!='", "'*'", "','", "'.'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'\\('", "'\\)'"
    };

    public static final int EOF=-1;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int A=4;
    public static final int AND=5;
    public static final int AS=6;
    public static final int ASC=7;
    public static final int B=8;
    public static final int BASIC_NAME=9;
    public static final int BETWEEN=10;
    public static final int BY=11;
    public static final int C=12;
    public static final int CROSS=13;
    public static final int D=14;
    public static final int DELETE=15;
    public static final int DESC=16;
    public static final int E=17;
    public static final int EXISTS=18;
    public static final int F=19;
    public static final int FROM=20;
    public static final int FULL=21;
    public static final int G=22;
    public static final int GROUP=23;
    public static final int H=24;
    public static final int HAVING=25;
    public static final int I=26;
    public static final int IN=27;
    public static final int INNER=28;
    public static final int INSERT=29;
    public static final int INTO=30;
    public static final int J=31;
    public static final int JOIN=32;
    public static final int K=33;
    public static final int L=34;
    public static final int LEFT=35;
    public static final int M=36;
    public static final int N=37;
    public static final int O=38;
    public static final int ON=39;
    public static final int OR=40;
    public static final int ORDER=41;
    public static final int OVER=42;
    public static final int P=43;
    public static final int PRE_SET=44;
    public static final int Q=45;
    public static final int R=46;
    public static final int RIGHT=47;
    public static final int ROWNUMBER=48;
    public static final int S=49;
    public static final int SELECT=50;
    public static final int SET=51;
    public static final int T=52;
    public static final int TEXT_STRING=53;
    public static final int U=54;
    public static final int UPDATE=55;
    public static final int V=56;
    public static final int VALUES=57;
    public static final int W=58;
    public static final int WHERE=59;
    public static final int WS=60;
    public static final int X=61;
    public static final int Y=62;
    public static final int Z=63;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AntlrV3SQLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AntlrV3SQLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return AntlrV3SQLParser.tokenNames; }
    public String getGrammarFileName() { return "AntlrV3SQL.g"; }


        private AntlrParserDelegate antlrParserDelegate;

        public void setAntlrParserDelegate(AntlrParserDelegate antlrParserDelegate) {
            this.antlrParserDelegate = antlrParserDelegate;
        }

    @Override
        public void reportError(RecognitionException e) {
        }




    // $ANTLR start "start"
    // AntlrV3SQL.g:21:1: start : ( sql_insert | sql_delete | sql_update | sql_select );
    public final void start() throws RecognitionException {
        try {
            // AntlrV3SQL.g:21:7: ( sql_insert | sql_delete | sql_update | sql_select )
            int alt1=4;
            switch ( input.LA(1) ) {
            case INSERT:
                {
                alt1=1;
                }
                break;
            case DELETE:
                {
                alt1=2;
                }
                break;
            case UPDATE:
                {
                alt1=3;
                }
                break;
            case SELECT:
                {
                alt1=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // AntlrV3SQL.g:22:2: sql_insert
                    {
                    pushFollow(FOLLOW_sql_insert_in_start23);
                    sql_insert();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // AntlrV3SQL.g:22:13: sql_delete
                    {
                    pushFollow(FOLLOW_sql_delete_in_start25);
                    sql_delete();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // AntlrV3SQL.g:22:24: sql_update
                    {
                    pushFollow(FOLLOW_sql_update_in_start27);
                    sql_update();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // AntlrV3SQL.g:22:35: sql_select
                    {
                    pushFollow(FOLLOW_sql_select_in_start29);
                    sql_select();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "start"



    // $ANTLR start "sql_insert"
    // AntlrV3SQL.g:24:1: sql_insert : INSERT INTO table '\\(' insertColumn ( ',' insertColumn )* '\\)' VALUES '\\(' ( PRE_SET | ( ',' PRE_SET ) )* '\\)' ;
    public final void sql_insert() throws RecognitionException {
        try {
            // AntlrV3SQL.g:25:2: ( INSERT INTO table '\\(' insertColumn ( ',' insertColumn )* '\\)' VALUES '\\(' ( PRE_SET | ( ',' PRE_SET ) )* '\\)' )
            // AntlrV3SQL.g:26:2: INSERT INTO table '\\(' insertColumn ( ',' insertColumn )* '\\)' VALUES '\\(' ( PRE_SET | ( ',' PRE_SET ) )* '\\)'
            {
            match(input,INSERT,FOLLOW_INSERT_in_sql_insert40); 

            match(input,INTO,FOLLOW_INTO_in_sql_insert42); 

            pushFollow(FOLLOW_table_in_sql_insert44);
            table();

            state._fsp--;


            match(input,74,FOLLOW_74_in_sql_insert46); 

            pushFollow(FOLLOW_insertColumn_in_sql_insert48);
            insertColumn();

            state._fsp--;


            // AntlrV3SQL.g:26:38: ( ',' insertColumn )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==66) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // AntlrV3SQL.g:26:39: ',' insertColumn
            	    {
            	    match(input,66,FOLLOW_66_in_sql_insert51); 

            	    pushFollow(FOLLOW_insertColumn_in_sql_insert53);
            	    insertColumn();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,75,FOLLOW_75_in_sql_insert57); 

            match(input,VALUES,FOLLOW_VALUES_in_sql_insert59); 

            match(input,74,FOLLOW_74_in_sql_insert61); 

            // AntlrV3SQL.g:26:75: ( PRE_SET | ( ',' PRE_SET ) )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==PRE_SET) ) {
                    alt3=1;
                }
                else if ( (LA3_0==66) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // AntlrV3SQL.g:26:76: PRE_SET
            	    {
            	    match(input,PRE_SET,FOLLOW_PRE_SET_in_sql_insert64); 

            	    }
            	    break;
            	case 2 :
            	    // AntlrV3SQL.g:26:84: ( ',' PRE_SET )
            	    {
            	    // AntlrV3SQL.g:26:84: ( ',' PRE_SET )
            	    // AntlrV3SQL.g:26:85: ',' PRE_SET
            	    {
            	    match(input,66,FOLLOW_66_in_sql_insert67); 

            	    match(input,PRE_SET,FOLLOW_PRE_SET_in_sql_insert69); 

            	    }


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            match(input,75,FOLLOW_75_in_sql_insert74); 

            this.antlrParserDelegate.setSqlOp(AntlrParserDelegate.SQLOP_INSERT);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sql_insert"



    // $ANTLR start "sql_delete"
    // AntlrV3SQL.g:30:1: sql_delete : DELETE FROM table ( WHERE kv_sql )? ;
    public final void sql_delete() throws RecognitionException {
        try {
            // AntlrV3SQL.g:31:2: ( DELETE FROM table ( WHERE kv_sql )? )
            // AntlrV3SQL.g:32:2: DELETE FROM table ( WHERE kv_sql )?
            {
            match(input,DELETE,FOLLOW_DELETE_in_sql_delete91); 

            match(input,FROM,FOLLOW_FROM_in_sql_delete93); 

            pushFollow(FOLLOW_table_in_sql_delete95);
            table();

            state._fsp--;


            // AntlrV3SQL.g:32:20: ( WHERE kv_sql )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==WHERE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // AntlrV3SQL.g:32:21: WHERE kv_sql
                    {
                    match(input,WHERE,FOLLOW_WHERE_in_sql_delete98); 

                    pushFollow(FOLLOW_kv_sql_in_sql_delete100);
                    kv_sql();

                    state._fsp--;


                    }
                    break;

            }


            this.antlrParserDelegate.setSqlOp(AntlrParserDelegate.SQLOP_DELETE);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sql_delete"



    // $ANTLR start "sql_update"
    // AntlrV3SQL.g:36:1: sql_update : UPDATE table SET kv ( ',' kv )* ( WHERE kv_sql )? ;
    public final void sql_update() throws RecognitionException {
        try {
            // AntlrV3SQL.g:37:2: ( UPDATE table SET kv ( ',' kv )* ( WHERE kv_sql )? )
            // AntlrV3SQL.g:38:2: UPDATE table SET kv ( ',' kv )* ( WHERE kv_sql )?
            {
            match(input,UPDATE,FOLLOW_UPDATE_in_sql_update119); 

            pushFollow(FOLLOW_table_in_sql_update121);
            table();

            state._fsp--;


            match(input,SET,FOLLOW_SET_in_sql_update123); 

            pushFollow(FOLLOW_kv_in_sql_update125);
            kv();

            state._fsp--;


            // AntlrV3SQL.g:38:22: ( ',' kv )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==66) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // AntlrV3SQL.g:38:23: ',' kv
            	    {
            	    match(input,66,FOLLOW_66_in_sql_update128); 

            	    pushFollow(FOLLOW_kv_in_sql_update130);
            	    kv();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            // AntlrV3SQL.g:38:32: ( WHERE kv_sql )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==WHERE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // AntlrV3SQL.g:38:33: WHERE kv_sql
                    {
                    match(input,WHERE,FOLLOW_WHERE_in_sql_update135); 

                    pushFollow(FOLLOW_kv_sql_in_sql_update137);
                    kv_sql();

                    state._fsp--;


                    }
                    break;

            }


            this.antlrParserDelegate.setSqlOp(AntlrParserDelegate.SQLOP_UPDATE);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sql_update"



    // $ANTLR start "sql_select"
    // AntlrV3SQL.g:42:1: sql_select : SELECT select_columns ( ',' db2_paging )? FROM ( sqlAfterFrom | inner_select ) ( WHERE kv_sql )? ( orderby | groupby | having )* ;
    public final void sql_select() throws RecognitionException {
        try {
            // AntlrV3SQL.g:43:2: ( SELECT select_columns ( ',' db2_paging )? FROM ( sqlAfterFrom | inner_select ) ( WHERE kv_sql )? ( orderby | groupby | having )* )
            // AntlrV3SQL.g:44:2: SELECT select_columns ( ',' db2_paging )? FROM ( sqlAfterFrom | inner_select ) ( WHERE kv_sql )? ( orderby | groupby | having )*
            {
            match(input,SELECT,FOLLOW_SELECT_in_sql_select157); 

            pushFollow(FOLLOW_select_columns_in_sql_select159);
            select_columns();

            state._fsp--;


            // AntlrV3SQL.g:44:24: ( ',' db2_paging )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==66) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // AntlrV3SQL.g:44:25: ',' db2_paging
                    {
                    match(input,66,FOLLOW_66_in_sql_select162); 

                    pushFollow(FOLLOW_db2_paging_in_sql_select163);
                    db2_paging();

                    state._fsp--;


                    }
                    break;

            }


            match(input,FROM,FOLLOW_FROM_in_sql_select167); 

            // AntlrV3SQL.g:44:46: ( sqlAfterFrom | inner_select )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==BASIC_NAME) ) {
                alt8=1;
            }
            else if ( (LA8_0==74) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }
            switch (alt8) {
                case 1 :
                    // AntlrV3SQL.g:44:47: sqlAfterFrom
                    {
                    pushFollow(FOLLOW_sqlAfterFrom_in_sql_select170);
                    sqlAfterFrom();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // AntlrV3SQL.g:44:60: inner_select
                    {
                    pushFollow(FOLLOW_inner_select_in_sql_select172);
                    inner_select();

                    state._fsp--;


                    }
                    break;

            }


            // AntlrV3SQL.g:44:74: ( WHERE kv_sql )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==WHERE) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // AntlrV3SQL.g:44:75: WHERE kv_sql
                    {
                    match(input,WHERE,FOLLOW_WHERE_in_sql_select176); 

                    pushFollow(FOLLOW_kv_sql_in_sql_select178);
                    kv_sql();

                    state._fsp--;


                    }
                    break;

            }


            // AntlrV3SQL.g:44:90: ( orderby | groupby | having )*
            loop10:
            do {
                int alt10=4;
                switch ( input.LA(1) ) {
                case ORDER:
                    {
                    alt10=1;
                    }
                    break;
                case GROUP:
                    {
                    alt10=2;
                    }
                    break;
                case HAVING:
                    {
                    alt10=3;
                    }
                    break;

                }

                switch (alt10) {
            	case 1 :
            	    // AntlrV3SQL.g:44:91: orderby
            	    {
            	    pushFollow(FOLLOW_orderby_in_sql_select183);
            	    orderby();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // AntlrV3SQL.g:44:99: groupby
            	    {
            	    pushFollow(FOLLOW_groupby_in_sql_select185);
            	    groupby();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // AntlrV3SQL.g:44:107: having
            	    {
            	    pushFollow(FOLLOW_having_in_sql_select187);
            	    having();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            this.antlrParserDelegate.setSqlOp(AntlrParserDelegate.SQLOP_SELECT);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sql_select"



    // $ANTLR start "sqlAfterFrom"
    // AntlrV3SQL.g:48:1: sqlAfterFrom : tables ( ( FULL | CROSS | INNER | LEFT | RIGHT ) JOIN table ( ON column_name '=' column_name )? )* ;
    public final void sqlAfterFrom() throws RecognitionException {
        try {
            // AntlrV3SQL.g:49:2: ( tables ( ( FULL | CROSS | INNER | LEFT | RIGHT ) JOIN table ( ON column_name '=' column_name )? )* )
            // AntlrV3SQL.g:50:2: tables ( ( FULL | CROSS | INNER | LEFT | RIGHT ) JOIN table ( ON column_name '=' column_name )? )*
            {
            pushFollow(FOLLOW_tables_in_sqlAfterFrom204);
            tables();

            state._fsp--;


            // AntlrV3SQL.g:50:9: ( ( FULL | CROSS | INNER | LEFT | RIGHT ) JOIN table ( ON column_name '=' column_name )? )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==CROSS||LA12_0==FULL||LA12_0==INNER||LA12_0==LEFT||LA12_0==RIGHT) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // AntlrV3SQL.g:50:10: ( FULL | CROSS | INNER | LEFT | RIGHT ) JOIN table ( ON column_name '=' column_name )?
            	    {
            	    if ( input.LA(1)==CROSS||input.LA(1)==FULL||input.LA(1)==INNER||input.LA(1)==LEFT||input.LA(1)==RIGHT ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    match(input,JOIN,FOLLOW_JOIN_in_sqlAfterFrom219); 

            	    pushFollow(FOLLOW_table_in_sqlAfterFrom221);
            	    table();

            	    state._fsp--;


            	    // AntlrV3SQL.g:50:51: ( ON column_name '=' column_name )?
            	    int alt11=2;
            	    int LA11_0 = input.LA(1);

            	    if ( (LA11_0==ON) ) {
            	        alt11=1;
            	    }
            	    switch (alt11) {
            	        case 1 :
            	            // AntlrV3SQL.g:50:52: ON column_name '=' column_name
            	            {
            	            match(input,ON,FOLLOW_ON_in_sqlAfterFrom224); 

            	            pushFollow(FOLLOW_column_name_in_sqlAfterFrom226);
            	            column_name();

            	            state._fsp--;


            	            match(input,71,FOLLOW_71_in_sqlAfterFrom228); 

            	            pushFollow(FOLLOW_column_name_in_sqlAfterFrom230);
            	            column_name();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sqlAfterFrom"



    // $ANTLR start "kv_sql_wrapper"
    // AntlrV3SQL.g:52:1: kv_sql_wrapper : ( kv_sql | '\\(' kv_sql '\\)' );
    public final void kv_sql_wrapper() throws RecognitionException {
        try {
            // AntlrV3SQL.g:53:2: ( kv_sql | '\\(' kv_sql '\\)' )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==BASIC_NAME) ) {
                alt13=1;
            }
            else if ( (LA13_0==74) ) {
                alt13=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;

            }
            switch (alt13) {
                case 1 :
                    // AntlrV3SQL.g:54:2: kv_sql
                    {
                    pushFollow(FOLLOW_kv_sql_in_kv_sql_wrapper244);
                    kv_sql();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // AntlrV3SQL.g:54:11: '\\(' kv_sql '\\)'
                    {
                    match(input,74,FOLLOW_74_in_kv_sql_wrapper248); 

                    pushFollow(FOLLOW_kv_sql_in_kv_sql_wrapper250);
                    kv_sql();

                    state._fsp--;


                    match(input,75,FOLLOW_75_in_kv_sql_wrapper252); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "kv_sql_wrapper"



    // $ANTLR start "kv_sql"
    // AntlrV3SQL.g:56:1: kv_sql : kv ( and_or ( kv | '\\(' kv ( and_or kv )* '\\)' ) )* ;
    public final void kv_sql() throws RecognitionException {
        try {
            // AntlrV3SQL.g:56:8: ( kv ( and_or ( kv | '\\(' kv ( and_or kv )* '\\)' ) )* )
            // AntlrV3SQL.g:57:2: kv ( and_or ( kv | '\\(' kv ( and_or kv )* '\\)' ) )*
            {
            pushFollow(FOLLOW_kv_in_kv_sql263);
            kv();

            state._fsp--;


            // AntlrV3SQL.g:57:5: ( and_or ( kv | '\\(' kv ( and_or kv )* '\\)' ) )*
            loop16:
            do {
                int alt16=2;
                int LA16_0 = input.LA(1);

                if ( (LA16_0==AND||LA16_0==OR) ) {
                    alt16=1;
                }


                switch (alt16) {
            	case 1 :
            	    // AntlrV3SQL.g:57:7: and_or ( kv | '\\(' kv ( and_or kv )* '\\)' )
            	    {
            	    pushFollow(FOLLOW_and_or_in_kv_sql267);
            	    and_or();

            	    state._fsp--;


            	    // AntlrV3SQL.g:57:14: ( kv | '\\(' kv ( and_or kv )* '\\)' )
            	    int alt15=2;
            	    int LA15_0 = input.LA(1);

            	    if ( (LA15_0==BASIC_NAME) ) {
            	        alt15=1;
            	    }
            	    else if ( (LA15_0==74) ) {
            	        alt15=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 15, 0, input);

            	        throw nvae;

            	    }
            	    switch (alt15) {
            	        case 1 :
            	            // AntlrV3SQL.g:57:15: kv
            	            {
            	            pushFollow(FOLLOW_kv_in_kv_sql270);
            	            kv();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // AntlrV3SQL.g:57:20: '\\(' kv ( and_or kv )* '\\)'
            	            {
            	            match(input,74,FOLLOW_74_in_kv_sql274); 

            	            pushFollow(FOLLOW_kv_in_kv_sql276);
            	            kv();

            	            state._fsp--;


            	            // AntlrV3SQL.g:57:28: ( and_or kv )*
            	            loop14:
            	            do {
            	                int alt14=2;
            	                int LA14_0 = input.LA(1);

            	                if ( (LA14_0==AND||LA14_0==OR) ) {
            	                    alt14=1;
            	                }


            	                switch (alt14) {
            	            	case 1 :
            	            	    // AntlrV3SQL.g:57:29: and_or kv
            	            	    {
            	            	    pushFollow(FOLLOW_and_or_in_kv_sql279);
            	            	    and_or();

            	            	    state._fsp--;


            	            	    pushFollow(FOLLOW_kv_in_kv_sql281);
            	            	    kv();

            	            	    state._fsp--;


            	            	    }
            	            	    break;

            	            	default :
            	            	    break loop14;
            	                }
            	            } while (true);


            	            match(input,75,FOLLOW_75_in_kv_sql285); 

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop16;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "kv_sql"



    // $ANTLR start "inner_select"
    // AntlrV3SQL.g:60:1: inner_select : '\\(' sql_select '\\)' ( AS )? ( BASIC_NAME )? ;
    public final void inner_select() throws RecognitionException {
        try {
            // AntlrV3SQL.g:61:2: ( '\\(' sql_select '\\)' ( AS )? ( BASIC_NAME )? )
            // AntlrV3SQL.g:62:2: '\\(' sql_select '\\)' ( AS )? ( BASIC_NAME )?
            {
            match(input,74,FOLLOW_74_in_inner_select302); 

            pushFollow(FOLLOW_sql_select_in_inner_select304);
            sql_select();

            state._fsp--;


            match(input,75,FOLLOW_75_in_inner_select306); 

            // AntlrV3SQL.g:62:23: ( AS )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==AS) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // AntlrV3SQL.g:62:23: AS
                    {
                    match(input,AS,FOLLOW_AS_in_inner_select308); 

                    }
                    break;

            }


            // AntlrV3SQL.g:62:27: ( BASIC_NAME )?
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( (LA18_0==BASIC_NAME) ) {
                alt18=1;
            }
            switch (alt18) {
                case 1 :
                    // AntlrV3SQL.g:62:27: BASIC_NAME
                    {
                    match(input,BASIC_NAME,FOLLOW_BASIC_NAME_in_inner_select311); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "inner_select"



    // $ANTLR start "func"
    // AntlrV3SQL.g:65:1: func : BASIC_NAME '\\(' ( BASIC_NAME | '*' )? '\\)' ;
    public final void func() throws RecognitionException {
        try {
            // AntlrV3SQL.g:66:2: ( BASIC_NAME '\\(' ( BASIC_NAME | '*' )? '\\)' )
            // AntlrV3SQL.g:67:2: BASIC_NAME '\\(' ( BASIC_NAME | '*' )? '\\)'
            {
            match(input,BASIC_NAME,FOLLOW_BASIC_NAME_in_func324); 

            match(input,74,FOLLOW_74_in_func326); 

            // AntlrV3SQL.g:67:18: ( BASIC_NAME | '*' )?
            int alt19=2;
            int LA19_0 = input.LA(1);
